--- a/src/app/shell/header/header.component.html
+++ b/src/app/shell/header/header.component.html
@@ -18,6 +18,10 @@
             <i class="fas fa-home"></i>
             <span translate>Home</span>
           </a>
+          <a class="nav-item nav-link text-uppercase" routerLink="/customer" routerLinkActive="active">
+            <i class="fas fa-cubes"></i>
+            <span translate>Customer</span>
+          </a>
           <a class="nav-item nav-link text-uppercase" routerLink="/about" routerLinkActive="active">
             <i class="fas fa-question-circle"></i>
             <span translate>About</span>
