--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -1,1 +1,79 @@
-<p>customer works!</p>
+<h2>Customers</h2>
+<div class="card" [hidden]="IsAddNew">
+  <h5 class="card-header">Customers List</h5>
+  <div class="card-body">
+    <div class="card-title">
+      <i class="fas fa-user-plus"></i>
+      <input
+        type="button"
+        [value]="'Add New' | translate"
+        (click)="AddNew()"
+        class="btn btn-primary fas fa-coffee fa-sm"
+      />
+    </div>
+    <table class="table table-responsive table-bordered table-striped">
+      <thead class="table-dark">
+        <tr>
+          <th translate>First Name</th>
+          <th translate>Last Name</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let item of Customers">
+          <td>{{ item.FName }}</td>
+          <td>{{ item.LName }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+
+<div class="card" [hidden]="!IsAddNew" ngForm #myForm="ngForm">
+  <h5 class="card-header">Add customer</h5>
+  <div class="card-body">
+    <div class="form-group">
+      <label for="fname" translate>First Name</label>
+      <input
+        type="text"
+        class="form-control"
+        id="fname"
+        name="FName"
+        [(ngModel)]="this.FName"
+        required
+        minlength="3"
+        #F="ngModel"
+      />
+      <div class="alert alert-danger" [hidden]="!(F.dirty && F.errors?.['required'])">First Name is required</div>
+      <div class="alert alert-danger" [hidden]="!(F.dirty && F.errors?.['minlength'])">
+        Minimum 3 characters needed for First Name
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="lname" translate>Last Name</label>
+      <input
+        type="text"
+        class="form-control"
+        id="lname"
+        name="LName"
+        [(ngModel)]="this.LName"
+        required
+        minlength="3"
+        #L="ngModel"
+      />
+      <div class="alert alert-danger" [hidden]="!(L.dirty && L.errors?.['required'])">Last Name is required</div>
+      <div class="alert alert-danger" [hidden]="!(L.dirty && L.errors?.['minlength'])">
+        Minimum 3 characters needed for Last Name
+      </div>
+    </div>
+    <br />
+    <input
+      type="button"
+      class="btn btn-success"
+      [value]="'Save' | translate"
+      (click)="Save()"
+      [disabled]="myForm.invalid"
+    />
+    &nbsp;
+    <input type="button" class="btn btn-danger" [value]="'Cancel' | translate" (click)="Cancel()" />
+  </div>
+</div>
