--- a/src/app/shell/header/header.component.html
+++ b/src/app/shell/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
+  <nav class="navbar navbar-expand-md navbar-dark bg-primary">
+    <div class="container">
       <a class="navbar-brand" href="https://github.com/ngx-rocket" translate>APP_NAME</a>
       <button
         class="navbar-toggler"
@@ -41,6 +41,7 @@
               <button class="dropdown-item" (click)="logout()" translate>Logout</button>
             </div>
           </div>
+          <span class="nav-item nav-link">{{ username }}</span>
         </div>
       </div>
     </div>
