--- a/src/app/shell/header/header.component.html
+++ b/src/app/shell/header/header.component.html
@@ -41,7 +41,7 @@
               <button class="dropdown-item" (click)="logout()" translate>Logout</button>
             </div>
           </div>
-          <span class="nav-item nav-link">{{ username }}</span>
+          <span class="nav-item navbar-text">{{ username }}</span>
         </div>
       </div>
     </div>
