--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,5 +6,6 @@
     </h1>
     <app-loader [isLoading]="isLoading"></app-loader>
     <q [hidden]="isLoading">{{ quote }}</q>
+    <button class="btn btn-danger" (click)="errorClick()">Errors</button>
   </div>
 </div>
