--- a/src/app/auth/login.component.html
+++ b/src/app/auth/login.component.html
@@ -1,12 +1,5 @@
 <div class="login-container bg-light">
   <div class="login-box">
-    <h1 translate>APP_NAME</h1>
-    <div>
-      <h6 class="d-inline-block">v{{ version }}</h6>
-      <div class="d-inline-block ml-3">
-        <app-language-selector></app-language-selector>
-      </div>
-    </div>
     <div class="container">
       <div class="card col-md-6 mt-3 mx-auto">
         <div class="card-body">
@@ -69,6 +62,13 @@
             </div>
           </form>
         </div>
+      </div>
+    </div>
+    <!--<h1 translate>APP_NAME</h1>-->
+    <div>
+      <h6 class="d-inline-block">v{{ version }}</h6>
+      <div class="d-inline-block ml-3">
+        <app-language-selector></app-language-selector>
       </div>
     </div>
   </div>
