--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -1,87 +1,110 @@
 <h2 class="text-center">Customers<app-loader [isLoading]="true" *ngIf="IsLoading$ | async"></app-loader></h2>
+<div [hidden]="IsLoading$ | async">
+  <div class="card" *ngIf="(IsAddNew$ | async) === false; else AddNewTemplate">
+    <h5 class="card-header">Customers List</h5>
+    <div class="card-body">
+      <div class="card-title">
+        <!--<button (click)="addNew()" class="btn btn-primary fas fa-coffee fa-sm">-->
+        <button (click)="addNew()" class="btn btn-primary">
+          <i class="fas fa-user-plus"></i>
+          <span translate>Add New</span>
+        </button>
+      </div>
+      <table class="table table-responsive table-bordered table-striped">
+        <thead class="table-dark">
+          <tr>
+            <th translate>First Name</th>
+            <th translate>Last Name</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of Customers$ | async">
+            <td>{{ item.FName }}</td>
+            <td>{{ item.LName }}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 
-<div class="card" *ngIf="(IsAddNew$ | async) === false; else AddNewTemplate">
-  <h5 class="card-header">Customers List</h5>
-  <div class="card-body">
-    <div class="card-title">
-      <!--<button (click)="addNew()" class="btn btn-primary fas fa-coffee fa-sm">-->
-      <button (click)="addNew()" class="btn btn-primary">
-        <i class="fas fa-user-plus"></i>
-        <span translate>Add New</span>
-      </button>
+  <ng-template #AddNewTemplate>
+    <div class="row">
+      <div class="col-md-3 col-sm-12"></div>
+      <div class="col-md-6 col-sm-12">
+        <form class="card" ngForm #myForm="ngForm">
+          <h5 class="card-header">Add customer</h5>
+          <div class="card-body">
+            <div class="form-group">
+              <label for="fname" translate>First Name</label>
+              <input
+                type="text"
+                class="form-control"
+                [ngClass]="{ 'is-valid': F.valid && F.touched, 'is-invalid': F.invalid && F.touched }"
+                id="fname"
+                name="FName"
+                [(ngModel)]="this.FName"
+                required
+                minlength="3"
+                #F="ngModel"
+              />
+              <div
+                class="alert alert-danger"
+                [hidden]="!(F.dirty &&
+                F.errors?.['required'])"
+              >
+                First Name is required
+              </div>
+              <div
+                class="alert alert-danger"
+                [hidden]="!(F.dirty &&
+                F.errors?.['minlength'])"
+              >
+                Minimum 3 characters needed for First Name
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="lname" translate>Last Name</label>
+              <input
+                type="text"
+                class="form-control"
+                [ngClass]="{ 'is-valid': L.valid && F.touched, 'is-invalid': L.invalid && F.touched }"
+                id="lname"
+                name="LName"
+                [(ngModel)]="this.LName"
+                required
+                minlength="3"
+                #L="ngModel"
+              />
+              <div
+                class="alert alert-danger"
+                [hidden]="!(L.dirty &&
+                L.errors?.['required'])"
+              >
+                Last Name is required
+              </div>
+              <div
+                class="alert alert-danger"
+                [hidden]="!(L.dirty &&
+                L.errors?.['minlength'])"
+              >
+                Minimum 3 characters needed for Last Name
+              </div>
+            </div>
+            <br />
+            <input
+              type="submit"
+              class="btn btn-success"
+              [value]="'Save' | translate"
+              (click)="save()"
+              [disabled]="myForm.invalid"
+            />
+            &nbsp;
+
+            <input type="reset" class="btn btn-danger" [value]="'Cancel' | translate" (click)="cancel()" />
+          </div>
+        </form>
+      </div>
+      <div class="col-md-3 col-sm-12"></div>
     </div>
-    <table class="table table-responsive table-bordered table-striped">
-      <thead class="table-dark">
-        <tr>
-          <th translate>First Name</th>
-          <th translate>Last Name</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let item of Customers$ | async">
-          <td>{{ item.FName }}</td>
-          <td>{{ item.LName }}</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+  </ng-template>
 </div>
-<ng-template #AddNewTemplate>
-  <div class="row">
-    <div class="col-md-3 col-sm-12"></div>
-    <div class="col-md-6 col-sm-12">
-      <form class="card" ngForm #myForm="ngForm">
-        <h5 class="card-header">Add customer</h5>
-        <div class="card-body">
-          <div class="form-group">
-            <label for="fname" translate>First Name</label>
-            <input
-              type="text"
-              class="form-control"
-              [ngClass]="{ 'is-valid': F.valid && F.touched, 'is-invalid': F.invalid && F.touched }"
-              id="fname"
-              name="FName"
-              [(ngModel)]="this.FName"
-              required
-              minlength="3"
-              #F="ngModel"
-            />
-            <div class="alert alert-danger" [hidden]="!(F.dirty && F.errors?.['required'])">First Name is required</div>
-            <div class="alert alert-danger" [hidden]="!(F.dirty && F.errors?.['minlength'])">
-              Minimum 3 characters needed for First Name
-            </div>
-          </div>
-          <div class="form-group">
-            <label for="lname" translate>Last Name</label>
-            <input
-              type="text"
-              class="form-control"
-              [ngClass]="{ 'is-valid': L.valid && F.touched, 'is-invalid': L.invalid && F.touched }"
-              id="lname"
-              name="LName"
-              [(ngModel)]="this.LName"
-              required
-              minlength="3"
-              #L="ngModel"
-            />
-            <div class="alert alert-danger" [hidden]="!(L.dirty && L.errors?.['required'])">Last Name is required</div>
-            <div class="alert alert-danger" [hidden]="!(L.dirty && L.errors?.['minlength'])">
-              Minimum 3 characters needed for Last Name
-            </div>
-          </div>
-          <br />
-          <input
-            type="submit"
-            class="btn btn-success"
-            [value]="'Save' | translate"
-            (click)="save()"
-            [disabled]="myForm.invalid"
-          />
-          &nbsp;
-          <input type="reset" class="btn btn-danger" [value]="'Cancel' | translate" (click)="cancel()" />
-        </div>
-      </form>
-    </div>
-    <div class="col-md-3 col-sm-12"></div>
-  </div>
-</ng-template>
