--- a/src/app/shell/header/header.component.html
+++ b/src/app/shell/header/header.component.html
@@ -26,6 +26,10 @@
             <i class="fas fa-cubes"></i>
             <span translate>Tree</span>
           </a>
+          <a class="nav-item nav-link text-uppercase" routerLink="/table-complete" routerLinkActive="active">
+            <i class="fas fa-cubes"></i>
+            <span translate>Table</span>
+          </a>
           <a class="nav-item nav-link text-uppercase" routerLink="/about" routerLinkActive="active">
             <i class="fas fa-question-circle"></i>
             <span translate>About</span>
