--- a/src/app/customer/customer-list/customer-list.component.html
+++ b/src/app/customer/customer-list/customer-list.component.html
@@ -9,7 +9,7 @@
       </button>
     </div>
     <table class="table table-responsive table-bordered table-striped">
-      <thead class="table-dark">
+      <thead class="table-primary">
         <tr>
           <th translate>First Name</th>
           <th translate>Last Name</th>
