--- a/src/app/customer/customer-list/customer-list.component.html
+++ b/src/app/customer/customer-list/customer-list.component.html
@@ -9,7 +9,12 @@
       </button>
     </div>
     <div *ngIf="showTable">
-      <table datatable [dtOptions]="dtOptions" class="row-border hover"></table>
+      <!--<table datatable [dtOptions]="dtOptions" class="row-border hover"></table>-->
+      <table
+        datatable
+        [dtOptions]="dtOptions"
+        class="table table-responsive table-bordered table-striped hover"
+      ></table>
       <p>Hello</p>
       <!--<table class="table table-responsive table-bordered table-striped">
         <thead class="table-primary">
