--- a/src/app/shell/header/header.component.html
+++ b/src/app/shell/header/header.component.html
@@ -22,6 +22,10 @@
             <i class="fas fa-cubes"></i>
             <span translate>Customer</span>
           </a>
+          <a class="nav-item nav-link text-uppercase" routerLink="/popis" routerLinkActive="active">
+            <i class="fas fa-cubes"></i>
+            <span translate>Popis</span>
+          </a>
           <a class="nav-item nav-link text-uppercase" routerLink="/tree" routerLinkActive="active">
             <i class="fas fa-cubes"></i>
             <span translate>Tree</span>
