--- a/src/app/popis/popis.component.html
+++ b/src/app/popis/popis.component.html
@@ -1,9 +1,36 @@
 <h2 class="text-center">Popis</h2>
 <app-loader [isLoading]="true" *ngIf="isLoading$ | async" ngClass="text-center"></app-loader>
-<button class="btn btn-primary" (click)="loadSredstva()" [disabled]="isLoading$ | async">Sredstva</button>
+<button
+  class="btn"
+  [ngClass]="showTable ? 'btn-primary' : 'btn-secondary'"
+  (click)="loadSredstva()"
+  [disabled]="isLoading$ | async"
+>
+  Sredstva {{ (sredstva$ | async)?.length }}
+</button>
+<button
+  class="btn"
+  [ngClass]="showTablePopisani ? 'btn-primary' : 'btn-secondary'"
+  (click)="loadPopisani()"
+  [disabled]="isLoading$ | async"
+>
+  Popisani {{ (popisani$ | async)?.length }}
+</button>
 <div *ngIf="(isLoading$ | async) === false">
-  {{ (sredstva$ | async)?.length }}
-  <table datatable [dtOptions]="dtOptions" class="table table-responsive table-bordered table-striped hover">
+  <table
+    datatable
+    [dtOptions]="dtOptions"
+    class="table table-responsive table-bordered table-striped hover"
+    *ngIf="showTable"
+  >
+    <thead class="table-primary"></thead>
+  </table>
+  <table
+    datatable
+    [dtOptions]="dtOptionsPopisani"
+    class="table table-responsive table-bordered table-striped hover"
+    *ngIf="showTablePopisani"
+  >
     <thead class="table-primary"></thead>
   </table>
 </div>
