--- a/src/app/popis/popis.component.html
+++ b/src/app/popis/popis.component.html
@@ -1,29 +1,32 @@
-<h2 class="text-center">Popis</h2>
+<h2 class="text-center">Попис</h2>
+<div>
+  <button
+    class="btn"
+    [ngClass]="tableToShow === 'Sredstva' ? 'btn-primary' : 'btn-secondary'"
+    (click)="loadSredstva()"
+    [disabled]="isLoading$ | async"
+  >
+    Сите Средства {{ (sredstva$ | async)?.length === 0 ? '' : (sredstva$ | async)?.length }}
+  </button>
+  <button
+    class="btn"
+    [ngClass]="tableToShow === 'Popisani' ? 'btn-primary' : 'btn-secondary'"
+    (click)="loadPopisani()"
+    [disabled]="isLoading$ | async"
+  >
+    Само попишани {{ (popisani$ | async)?.length === 0 ? '' : (popisani$ | async)?.length }}
+  </button>
+  <button
+    class="btn"
+    [ngClass]="tableToShow === 'NePopisani' ? 'btn-primary' : 'btn-secondary'"
+    (click)="loadNePopisani()"
+    [disabled]="isLoading$ | async"
+  >
+    Непопишани {{ (nePopisani$ | async)?.length === 0 ? '' : (nePopisani$ | async)?.length }}
+  </button>
+</div>
+<hr />
 <app-loader [isLoading]="true" *ngIf="isLoading$ | async" ngClass="text-center"></app-loader>
-<button
-  class="btn"
-  [ngClass]="tableToShow === 'Sredstva' ? 'btn-primary' : 'btn-secondary'"
-  (click)="loadSredstva()"
-  [disabled]="isLoading$ | async"
->
-  Sredstva {{ (sredstva$ | async)?.length }}
-</button>
-<button
-  class="btn"
-  [ngClass]="tableToShow === 'Popisani' ? 'btn-primary' : 'btn-secondary'"
-  (click)="loadPopisani()"
-  [disabled]="isLoading$ | async"
->
-  Popisani {{ (popisani$ | async)?.length }}
-</button>
-<button
-  class="btn"
-  [ngClass]="tableToShow === 'NePopisani' ? 'btn-primary' : 'btn-secondary'"
-  (click)="loadNePopisani()"
-  [disabled]="isLoading$ | async"
->
-  Nepopisani {{ (nePopisani$ | async)?.length }}
-</button>
 <div *ngIf="(isLoading$ | async) === false">
   <table
     datatable
